--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,9 +4,10 @@ ja:
       task: スケジュール
     attributes:
       task:
-        title: 名前
-        start_time: 開始時間
-        end_time: 終了時間
+       
+        start_time: 開始日
+        end_time: 終了日
         all_day: 終日
+        title: タイトル
         content: スケジュールメモ
         
